src/test/resources/typeSystemTestModels/invalid/fieldsAndLocalVars/FieldModifierAccessCombinations.java
package typeSystemTestModels.invalid.fieldsAndLocalVars;

public class FieldModifierAllowedCombinations {
  public private protected int n;
  public private int nn;
  public protected int nnn;
  private protected int nnnn;
}